First version of layout & styling

--- a/src/documents/index.html.jade
+++ b/src/documents/index.html.jade
@@ -5,7 +5,7 @@ isPage: true
 ---
   
 header
-  h1 Welcome to my blog!
+  h1 Jeg elsker skatta mi
   p I write about development and all kinds of tech shit that interests me. Keep in touch!
 each post in getCollection("posts").toJSON()
   section
