--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -1,38 +1,59 @@
 /* Aksel */
 
+//Extra power! http://visionmedia.github.io/nib/
+@import 'nib'
 
 /* ===================
     FONTS
     =================== */
 
 /*
-* We use Google Web Fonts.
+* I use Google Web Fonts.
 * PT Sans for bodytext, PT Serif for headings, Oswall for logo/title
 */
-@import url(http://fonts.googleapis.com/css?family=PT\+Sans:400,700,400italic,700italic\|PT\+Serif:700,400italic\|Oswald:400,700)
+@import url(http://fonts.googleapis.com/css?family=PT\+Sans:400,700,400italic,700italic\|PT\+Serif:400,700,400italic\|Oswald:300,400,700\|Lato:100,300,400)
 
 /** Usage
 font-family: 'PT Sans', sans-serif;
 font-family: 'PT Serif', serif;
 font-family: 'Oswald', sans-serif;
+font-family: 'Lato', sans-serif;
 **/
 
 body 
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'PT Serif', serif;
+    //font-family: 'PT Sans', sans-serif;
     color: #444
 
 h1, h2, h3, h4, h5, h6
-    font-family: 'PT Serif', serif;
+    //font-family: 'PT Serif', serif;
+    //font-family: 'Lato', sans-serif
+    font-family: 'Oswald', sans-serif
+    font-weight: 100
     color: #222
+    text-transform: capitalize
 
-.footer-container footer,
+a
+    color: #2aa198
+    text-decoration: none
+
+.main footer,
 .main aside
     color: #444
+    h3
+        text-transform: uppercase
+
+.footer-container footer
+    h1, h2, h3, h4, h5, h6
+        color: #fff
+        text-transform: uppercase
+    p, span
+        color: #999
 
 //Make abbreviations stand out less
 abbr
     font-variant: small-caps;
-    font-weight: 600
+    font-weight: 700
 
 //Indented paragraphs instead of space below them
 p
@@ -44,15 +65,31 @@ p + p
 
 
 /*** Logo/Title ***/
+.title
+.footer-container footer .title
+    font-family: 'Oswald', sans-serif
+    font-weight: 300
+    text-transform: none
+    color: #2aa198
+    line-height: 1em
+    
+header .title
+    font-size: 2.5em
+    @media only screen and (min-width: 768px)
+        font-size: 3em
+    @media only screen and (min-width: 1140px)
+        font-size: 3.5em
+    
+    
 
-h1.title
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase
-    font-size: 48px
-
-    a
-        text-decoration: none
-        color: black
+header h4.subtitle
+    font-family: 'Oswald', sans-serif
+    font-size: .7em //64px
+    @media only screen and (min-width: 768px)
+        font-size: .9em
+    font-style: italic
+    font-weight: 300
+    color: #002b36
 
 /*** End Logo/Title ***/
 
@@ -60,30 +97,61 @@ h1.title
 
 
 /* ===================
-    ALL: Orange Theme
+    ALL: Theme & layout
    =================== */
-
+//Background
+//body
+    
 .header-container
-    border-bottom: 2px solid grey
+    //background-color: #fdf6e3
+    background-image: url('/images/styling/debut_light@2X.png')
+    box-shadow: 0px 1px 4px rgba(0,0,0,.2)
+    //text-align: center
+    border-top: 2px solid #2aa198
+    border-bottom: 1px solid #2aa198
+    z-index: 100
 
+    header 
+        margin: 0 0 0 1em
+        .title 
+            line-height: 1em
+            margin: 0 0 -3px 0
+        .subtitle
+            margin: 1em 0 -.3em .3em
+
+.title
+    float:none
+
+.main-container
+    background-image: url('/images/styling/debut_light.png')
+    z-index: 1
 
 .footer-container,
 .main aside
-    border-top: 20px solid grey;
+    //border-top: 2px solid grey;
+    box-shadow: none //0px 1px 4px rgba(0,0,0,.2);
 
-
-.header-container,
-.footer-container,
 .main aside
-    background: none //#f16529
+    //background: #fdf6e3
 
-/* ============= End Theme ================*/
+.main article
+    //border-right: 1px solid gray
+
+.footer-container,
+footer.wrapper
+    background: #002b36
+
+.footer-container
+    border-top: 3px solid #2aa198
+
+/* ============= End Theme & Layout ================*/
 
 
 /* ===================
-    Sticky Footer
+    Footer
    =================== */
 
+/** Sticky footer **/
 *
     margin: 0;
 
@@ -94,11 +162,14 @@ html, body
     min-height: 100%;
     height: auto !important;
     height: 100%;
-    margin: 0 auto -7em;
+    margin: 0 auto -8em;
 
 .footer-container, 
 .push
-    height: 7em
+    height: 10em
     clear: both
 
-/* ============= End Sticky Footer ================*/
+.footer-container footer
+    text-align: center
+/* ============= End Footer ================*/
+ 
