--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -79,8 +79,6 @@ header .title
         font-size: 3em
     @media only screen and (min-width: 1140px)
         font-size: 3.5em
-    
-    
 
 header h4.subtitle
     font-family: 'Oswald', sans-serif
@@ -97,7 +95,7 @@ header h4.subtitle
 
 
 /* ===================
-    ALL: Theme & layout
+    General: Theme & layout
    =================== */
 //Background
 //body
@@ -145,6 +143,18 @@ footer.wrapper
     border-top: 3px solid #2aa198
 
 /* ============= End Theme & Layout ================*/
+
+
+/* ===================
+    Index page
+   =================== */
+.post-metadata 
+    *
+        display: inline-block 
+    ul
+        padding:0
+        
+/* ============= End Index Page ================*/
 
 
 /* ===================
