--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -97,9 +97,6 @@ header h4.subtitle
 /* ===================
     General: Theme & layout
    =================== */
-//Background
-//body
-    
 .header-container
     //background-color: #fdf6e3
     background-image: url('/images/styling/debut_light@2X.png')
@@ -147,11 +144,23 @@ footer.wrapper
 /* ===================
     Index page
    =================== */
-.post-metadata 
-    *
-        display: inline-block 
-    ul
-        padding:0
+.post-item
+    margin: 2em 0
+    h2
+        margin-bottom: .1em
+    p
+        margin-top: 0
+    .post-metadata 
+        text-transform: lowercase
+        color: #999
+        font-size: .9em
+        *
+            display: inline-block 
+        ul
+            margin: 0
+            padding: 0
+            li a
+                //color: #
         
 /* ============= End Index Page ================*/
 
@@ -167,23 +176,6 @@ header nav
         color: #999
         font-size: 1.2em
         text-transform: uppercase
-
-/**** Responsive navigation, based on responsive-nav.com ****/
-
-/** Override some Initializr styles **/
-.nav-collapse     
-    li:first-child a
-        margin-left: inherit
-    
-    a
-        float: left
-        width: inherit
-        margin: inherit
-        margin-bottom: 10px
-        padding: 15px 2%
-        background: #002b36
-
-/**** Responsive naviation ****/
 
 /* ============= End Navigation ================*/
 
