--- a/src/layouts/main.html.jade
+++ b/src/layouts/main.html.jade
@@ -11,9 +11,10 @@ layout: skeleton
       li: a(href='/') MUSIC
       li: a(href='/') PHOTO
 
-    //h4.subtitle Front to back baby
-    h1.title
-      a(href='/') akselgresvig.com
+    .logo-box
+      h1.title
+        a(href='/') aksel gresvig
+      h4.subtitle Techblog
 
 .main-container
   .main.wrapper.clearfix
