--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -70,13 +70,13 @@ p + p
     font-weight: 400
     a
         color: #586e75
+        text-shadow: 1px 2px 2px #002b36;
     text-transform: none
     line-height: 1em
-    font-size: 2em
+    font-size: 3em
     letter-spacing: -.07em
-    
     @media only screen and (min-width: 480px)
-        font-size: 2.5em
+        font-size: 3.3em
     @media only screen and (min-width: 768px)
         font-size: 4em
     @media only screen and (min-width: 1140px)
@@ -90,11 +90,11 @@ p + p
     font-size: 1em
     font-weight: 400
     @media only screen and (min-width: 480px)
-        font-size: 1.2em
+        font-size: 1em
     @media only screen and (min-width: 768px)
-        font-size: 1.5em
+        font-size: 1.4em
     @media only screen and (min-width: 1140px)
-        font-size: 2em
+        font-size: 1.5em
 
 .footer-container footer .title
     font-size: 1.5em
@@ -126,10 +126,21 @@ p + p
                 position: absolute
                 margin: 0
             .title
-                bottom: -3px
+                bottom: -1px
+                @media only screen and (min-width: 1140px)
+                    bottom: -3px
             .subtitle
-                top: .6em
-                left: 5em
+                top: .25em
+                left: 5.6em
+                @media only screen and (min-width: 480px)
+                    top: 0.1em;
+                    left: 6.2em;
+                @media only screen and (min-width: 768px)
+                    top: 0.58em;
+                    left: 5.3em;
+                @media only screen and (min-width: 1140px)
+                    top: 0.3em;
+                    left: 5.6em;
 
 footer .title
     float:none
