Post layout on index page is close to done

--- a/src/layouts/main.html.jade
+++ b/src/layouts/main.html.jade
@@ -31,7 +31,7 @@ layout: skeleton
 .footer-container
   footer.wrapper
     h2.title
-      a(href='/') akselgresvig.com
+      a(href='/') aksel gresvig
     p Created with passion in Norway & Spain
     a(href='https://www.twitter.com/agresvig', target='blank') @AGresvig
 
