--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -3,6 +3,17 @@
 //Extra power! http://visionmedia.github.io/nib/
 @import 'nib'
 
+/*** Variables ***/
+
+// "Solarized" color palette
+$base01 = #586e75
+$base02 = #073642
+$base03 = #002b36
+$base00 = #657b83
+$orange = #cb4b16
+$cyan = #2aa198
+
+
 /* ===================
     SITEWIDE FONTS
     =================== */
@@ -23,14 +34,14 @@ font-family: 'Lato', sans-serif;
 body 
     font-family: 'PT Serif', serif;
     //font-family: 'PT Sans', sans-serif;
-    color: #444
+    color: #222
 
 h1, h2, h3, h4, h5, h6
     //font-family: 'PT Serif', serif;
     //font-family: 'Lato', sans-serif
     font-family: 'Oswald', sans-serif
     font-weight: 100
-    color: #222
+    color: $base01
     text-transform: capitalize
 
 a
@@ -68,8 +79,8 @@ p + p
     font-family: 'Oswald', sans-serif
     font-weight: 400
     a
-        color: #586e75
-        text-shadow: 1px 2px 2px #002b36;
+        color: $base01
+        text-shadow: 1px 2px 2px $base03;
     text-transform: none
     line-height: 1em
     font-size: 3em
@@ -109,8 +120,8 @@ p + p
 .header-container
     background-image: url('/images/styling/debut_light@2X.png')
     box-shadow: 0px 1px 4px rgba(0,0,0,.2)
-    border-top: 2px solid #2aa198
-    border-bottom: 1px solid #2aa198
+    border-top: 2px solid $cyan
+    border-bottom: 1px solid $cyan
     z-index: 100
 
     header 
@@ -123,7 +134,7 @@ p + p
                 position: absolute
                 margin: 0
             .title
-                bottom: -1px
+                bottom: -2px
                 @media only screen and (min-width: 1140px)
                     bottom: -3px
             .subtitle
@@ -159,10 +170,10 @@ footer .title
 
 .footer-container,
 footer.wrapper
-    background: #002b36
+    background: $base03
 
 .footer-container
-    border-top: 3px solid #2aa198
+    border-top: 3px solid $cyan
 
 /* ============= End Theme & Layout ================*/
 
@@ -171,22 +182,51 @@ footer.wrapper
     Index page
    =================== */
 .post-item
-    margin: 2em 0
-    h2
+    margin: 2em 0 4em 0
+    position: relative
+
+    .post-title
         margin-bottom: .1em
-    p
+    .post-body 
         margin-top: 0
+        display: block
+
     .post-metadata 
         text-transform: lowercase
         color: #999
         font-size: .9em
+        margin-bottom: 1em
         *
             display: inline-block 
         ul
             margin: 0
             padding: 0
-            li a
-                //color: #
+    
+    .latest
+        .post-image img
+            width: 100%
+        .post-content 
+            float: none
+            width: 100%
+
+    .previous 
+        .post-body 
+            .post-image
+                float: right 
+                width: 30%
+                height: 100%
+                overflow: hidden
+                position: absolute
+                bottom: 0.5em
+                right: 0
+
+             .post-content              
+                float: left
+                width: 65%
+                min-height: 5em;
+    .divider 
+            clear: both
+
         
 /* ============= End Index Page ================*/
 
@@ -209,7 +249,7 @@ header
             background: none
     nav.nav-collapse.opened
         a
-            background: #002b36;
+            background: $base03;
             margin: 0 0 10px 0
             padding: 15px 0;
             float: none
