--- a/src/layouts/main.html.jade
+++ b/src/layouts/main.html.jade
@@ -18,7 +18,7 @@ layout: skeleton
 
 .main-container
   .main.wrapper.clearfix
-    article!= content
+    article.content!= content
 
     aside
       h3 Aside
