--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -13,6 +13,10 @@ $base00 = #657b83
 $orange = #cb4b16
 $cyan = #2aa198
 
+//Fonts
+$bodyText = #444
+$headerText = #222
+
 
 /* ===================
     SITEWIDE FONTS
@@ -34,14 +38,14 @@ font-family: 'Lato', sans-serif;
 body 
     font-family: 'PT Serif', serif;
     //font-family: 'PT Sans', sans-serif;
-    color: #222
+    color: $bodyText
 
 h1, h2, h3, h4, h5, h6
     //font-family: 'PT Serif', serif;
     //font-family: 'Lato', sans-serif
     font-family: 'Oswald', sans-serif
     font-weight: 100
-    color: $base01
+    color: $headerText
     text-transform: capitalize
 
 a
@@ -150,23 +154,31 @@ p + p
                     bottom: 1.92em;
                     left: 5.6em;
 
-footer .title
-    float:none
-
 .main-container
     background-image: url('/images/styling/debut_light.png')
     z-index: 1
+    
+    .main .content
+        @media only screen and (min-width: 768px)
+            width: 69%
+        @media only screen and (min-width: 1168px)
+            width: 60%
 
+    .main aside
+        @media only screen and (min-width: 768px)
+            width: 28%
+            padding: 0 0 10px 0
+        @media only screen and (min-width: 1168px)
+            width: 30%
+        
+/** Footer **/
 .footer-container,
 .main aside
     //border-top: 2px solid grey;
     box-shadow: none //0px 1px 4px rgba(0,0,0,.2);
 
-.main aside
-    //background: #fdf6e3
-
-.main article
-    //border-right: 1px solid gray
+footer .title
+    float:none
 
 .footer-container,
 footer.wrapper
@@ -187,45 +199,71 @@ footer.wrapper
 
     .post-title
         margin-bottom: .1em
+        line-height: 1em
     .post-body 
         margin-top: 0
         display: block
 
     .post-metadata 
+        width: 65%
+        line-height: 1.2em
         text-transform: lowercase
         color: #999
         font-size: .9em
-        margin-bottom: 1em
+        margin: .5em 0
         *
+            margin: 0 .1em
             display: inline-block 
         ul
             margin: 0
             padding: 0
-    
-    .latest
-        .post-image img
-            width: 100%
-        .post-content 
-            float: none
-            width: 100%
+        span
+            margin-left: 0
 
-    .previous 
-        .post-body 
-            .post-image
-                float: right 
-                width: 30%
-                height: 100%
-                overflow: hidden
-                position: absolute
-                bottom: 0.5em
-                right: 0
-
-             .post-content              
-                float: left
-                width: 65%
-                min-height: 5em;
     .divider 
-            clear: both
+        clear: both
+
+    .earlier-posts
+        margin-bottom: .4em
+        color: #ccc
+    
+.latest.post-item
+    .post-image
+        margin: 2em 2%        
+    .post-content 
+        margin: 2em 2% 5em 2%       
+    .post-image img
+        width: 100%
+    .post-body, .post-content 
+        float: none
+        width: initial
+    .divider
+        margin-top: 0
+    
+.previous.post-item 
+    @media only screen and (min-width: 768px)
+        margin-right: -45% //We're making it span on the bigger screens
+    
+    .post-title
+        width: 65%
+    .post-body 
+        min-height: 5em;      
+        .post-image
+            float: right 
+            width: 30%
+            height: 100%
+            overflow: hidden
+            position: absolute
+            bottom: 0.5em
+            right: 0
+            img //this is to try to center the pic. should probably create thumbs instead..
+                position: absolute
+                left: -100%
+
+         .post-content              
+            float: left
+            width: 65%
+            margin-bottom: 1em
 
         
 /* ============= End Index Page ================*/
