--- a/src/layouts/post.html.jade
+++ b/src/layouts/post.html.jade
@@ -1,10 +1,15 @@
 ---
-layout: default
+layout: main
 ---
+- var post = document
 
-h1= document.title
-span= document.date.toDateString()
-.tags
-  each tag in document.tags
-    li= tag
-.post-content!= content
+.blogpost
+  h1.post-title= document.title
+  include ../includes/post-metadata
+  .post-image
+    img(src='/images/posts/'+post.image, alt='Post image')
+  .post-content!= content
+
+  footer
+    h3 article footer h3
+    p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.
