--- a/src/documents/index.html.jade
+++ b/src/documents/index.html.jade
@@ -3,26 +3,39 @@ title: Home
 layout: main
 isPage: true
 ---
-  
-//- List out formatted <section> tags for each existing post
-each post, index in getCollection("posts").toJSON().slice(0,4)
-  - var latestPost = index == 0 
-  div(class=latestPost ? 'latest' : 'previous').post-item
-    h1.post-title
-      a(href=post.url)= post.title
-    include ../includes/post-metadata
-  
-    .post-body
-      .post-image
-        img(src='/images/posts/'+post.image, alt='Post image')
-      if latestPost
-        //- Latest post is displayed in full
-        article.post-content!= post.contentRenderedWithoutLayouts
-        h2.earlier-posts Earlier posts:
-      else
-        p.post-content= post.summary
-    hr.divider
+article  
+  //- List out formatted sections for 5 latest posts, where first will be shown in full
+  each post, index in getCollection("posts").toJSON().slice(0,4)
+    - var latestPost = index == 0 
+    div(class=latestPost ? 'latest' : 'previous').post-item
+      h1.post-title
+        a(href=post.url)= post.title
+      .post-metadata.subtle-text
+        include ../includes/post-metadata
+    
+      .post-body
+        if latestPost
+          p.post-summary= post.summary
+        .post-image
+          img(src='/images/posts/'+post.image, alt='Post image')
+        if latestPost
+          //- Latest post is displayed in full
+          article.post-content!= post.contentRenderedWithoutLayouts
+          h2.earlier-posts Earlier posts:
+        else
+          p.post-content= post.summary
+      hr.divider
 
-footer
-  h3 article footer h3
-  p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.
+  //if we have more posts, show them in a regular list format 
+  - var numPosts = getCollection("posts").length
+  if numPosts > 5 
+    footer
+      h3 Older posts
+      ul
+      each oldPost in getCollection("posts").toJSON().slice(4)
+        li
+          a(href=oldPost.url)= oldPost.title 
+          |  on 
+          != oldPost.date.toDateString()
+
+include ../includes/about_aside
