--- a/src/layouts/main.html.jade
+++ b/src/layouts/main.html.jade
@@ -18,12 +18,7 @@ layout: skeleton
 
 .main-container
   .main.wrapper.clearfix
-    article.content!= content
-
-    aside
-      h3 Aside
-      p.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+    section.content!= content
 
     //for sticky footer
     .push
