--- a/src/layouts/post.html.jade
+++ b/src/layouts/post.html.jade
@@ -3,13 +3,32 @@ layout: main
 ---
 - var post = document
 
-.blogpost
+article.blogpost
   h1.post-title= document.title
-  include ../includes/post-metadata
+  .post-metadata.subtle-text
+    include ../includes/post-metadata
+  
+  p.post-summary= post.summary
   .post-image
     img(src='/images/posts/'+post.image, alt='Post image')
-  .post-content!= content
+  .post-content
+    != content
+    .post-metadata.bolded: include ../includes/post-metadata
+  
+  //If there are other posts with same tag, list them
+  - var relatedPosts = getCollection("posts").findAll({tags: {$in: post.tags}, title: {$ne: post.title}}).toJSON()
+  if relatedPosts.length
+    footer
+      h3 Related posts
+      ul
+      each relatedPost in relatedPosts
+        li
+          a(href=relatedPost.url)= relatedPost.title 
+          |  on 
+          != relatedPost.date.toDateString()
+    
+include ../includes/about_aside
 
-  footer
-    h3 article footer h3
-    p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.
+footer.comments
+  h3 Comments
+  p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.
