--- a/src/includes/post-metadata.jade
+++ b/src/includes/post-metadata.jade
@@ -1,7 +1,7 @@
 span Posted on 
   != post.date.toDateString()
 .tags
-  span in
+  .icon.icon-tags
   ul
     //- List tags with links in a comma separated list (no comma after last tag)
     each tag, index in post.tags
