Added tag cloud support, tag index page, extended tag functionality through tagging plugin

--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -290,10 +290,11 @@ footer.wrapper
     .post-summary
         margin: 0
     
-.previous.post-item 
+.mainpage .previous.post-item 
     @media only screen and (min-width: 768px)
         margin-right: -45% //We're making it span on the bigger screens
-    
+
+.previous.post-item     
     .post-title
         width: 65%
     .post-body 
