--- a/src/documents/index.html.jade
+++ b/src/documents/index.html.jade
@@ -3,7 +3,7 @@ title: Home
 layout: main
 isPage: true
 ---
-article  
+article.mainpage  
   //- List out formatted sections for 5 latest posts, where first will be shown in full
   each post, index in getCollection("posts").toJSON().slice(0,4)
     - var latestPost = index == 0 
@@ -32,10 +32,10 @@ article
     footer
       h3 Older posts
       ul
-      each oldPost in getCollection("posts").toJSON().slice(4)
-        li
-          a(href=oldPost.url)= oldPost.title 
-          |  on 
-          != oldPost.date.toDateString()
+        each oldPost in getCollection("posts").toJSON().slice(4)
+          li
+            a(href=oldPost.url)= oldPost.title 
+            |  on 
+            != oldPost.date.toDateString()
 
 include ../includes/about_aside
