--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -65,6 +65,9 @@ a
 .bolded
     font-weight: bold
 
+.italic
+    font-style: italic
+    
 .main footer,
 .main aside
     color: #444
@@ -287,8 +290,6 @@ footer.wrapper
         width: initial
     .divider
         margin-top: 0
-    .post-summary
-        margin: 0
     
 .mainpage .previous.post-item 
     @media only screen and (min-width: 768px)
