--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -70,7 +70,7 @@ a
     
 .main footer,
 .main aside
-    color: #444
+    color: $bodyText
     h3
         text-transform: uppercase
 
@@ -293,7 +293,7 @@ footer.wrapper
     
 .mainpage .previous.post-item 
     @media only screen and (min-width: 768px)
-        margin-right: -43% //We're making it span on the bigger screens
+        margin-right: -45% //We're making it span on the bigger screens
 
 .previous.post-item     
     .post-title
