--- a/src/layouts/post.html.jade
+++ b/src/layouts/post.html.jade
@@ -33,3 +33,16 @@ include ../includes/about_aside
 footer.comments
   h3 Comments
   p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.
+
+<!-- AddThis Smart Layers BEGIN -->
+<!-- Go to http://www.addthis.com/get/smart-layers to customize -->
+script(type="text/javascript", src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52939001482d1b04")
+script(type="text/javascript")
+  addthis.layers({
+    'theme' : 'transparent',
+    'share' : {
+      'position' : 'right',
+      'numPreferredServices' : 5,
+      'offset': {'bottom': '165px'}
+    }   
+  });
