Completed about section, added profile pic, social links

--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -74,6 +74,9 @@ a
     h3
         text-transform: uppercase
 
+    .bio p
+        font-style: italic
+
 .footer-container footer
     h1, h2, h3, h4, h5, h6
         color: #fff
@@ -319,6 +322,34 @@ footer.wrapper
 
         
 /* ============= End Index & blogpost page ==============*/
+
+/* ===================
+    Sidebar
+   =================== */
+.about
+    section
+        margin-bottom: 2em
+
+    .profile-pic img
+        width: 176px
+        border-radius: 88px;
+        box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+        -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+        -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+        margin: 0 auto;
+        display: block;
+    
+    .social-links
+        li
+            display: inline-block
+            .icon
+                color: $bodyText
+                font-size: 2em
+                padding-right: .3em
+    
+        
+
+/* ============= End Comments ==============*/
 
 /* ===================
     Comments
