--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -213,6 +213,7 @@ p + p
         @media only screen and (min-width: 768px)
             width: 28%
             padding: 0 0 10px 0
+            margin-top: 5em;
         @media only screen and (min-width: 1168px)
             width: 30%
         
