Added Disqus comments integration

--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -358,13 +358,15 @@ footer.wrapper
         opacity: 1
         
 
-/* ============= End Comments ==============*/
+/* ============= End Sidebar ==============*/
 
 /* ===================
     Comments
    =================== */
-.content footer.comments 
-    float: left
+.content footer#comments 
+    display: block;
+    width: 100%;
+    float: left;
 
 
 /* ============= End Comments ==============*/
