Some new styling, author link on posts, updated bio

--- a/src/includes/about_aside.jade
+++ b/src/includes/about_aside.jade
@@ -4,8 +4,8 @@ aside.about
     img(src='/images/aksel_gresvig.jpg', alt="Aksel Gresvig")
   
   section.bio
-    p I have a serious addiction to technology, and I work with development at Accenture Norway where I take on roles such as frontend developer & architect, frontend evangelist, entrapeneur to name a few.
-    p I am a generalist with too many hobbies. I love to live, I live to learn, and I'm currently doing so in Oslo, Norway.
+    p I'm Aksel and I make webapps. I have a serious addiction to technology, and I work at Accenture Norway where I take on roles such as frontend developer & architect for clients in the public and private sectors, as well as frontend evangelist & entrapeneur internally, to name a few.
+    p I am a generalist with too many hobbies. I love to live, and I live to learn.
   
   section.social-links    
     h3 Connect with me
