--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -166,6 +166,11 @@ p + p
     :first-child 
         margin-left: .7em
 
+.icon-lg
+    font-size: 1em
+    vertical-align: initial
+    padding: .2em
+
 .header-container
     background-image: url('/images/styling/debut_light@2X.png')
     box-shadow: 0px 1px 4px rgba(0,0,0,.2)
@@ -217,6 +222,12 @@ p + p
         @media only screen and (min-width: 1168px)
             width: 30%
         
+/** General containers **/
+.container
+    max-width: 380px;
+    _width: 380px;
+    margin: 0 auto;
+            
 /** Footer **/
 .footer-container,
 .main aside
@@ -256,7 +267,12 @@ footer.wrapper
         background-color: $base2
     li a:hover
         background-color: $base02
-    
+
+    .author
+        //I include this on the page for Google authorship purposes
+        //but I dont want to show it - there is only one author on this page..
+        display: none
+
 .post-item .post-metadata 
     width: 65%
 
