--- a/src/layouts/post.html.jade
+++ b/src/layouts/post.html.jade
@@ -7,6 +7,9 @@ article.blogpost
   h1.post-title= document.title
   .post-metadata.subtle-text
     include ../includes/post-metadata
+    span.author Author: 
+      a(target="_blank", rel="author", href="https://plus.google.com/u/0/+AkselGresvig?rel=author") Aksel Gresvig
+
   
   p.post-summary= post.summary
   .post-image
