--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -22,6 +22,13 @@ $bodyText = #444
 $headerText = #222
 $lightGrey = #999
 
+/* ===================
+    IMPORTS
+    =================== */
+
+//Extra power! http://visionmedia.github.io/nib/
+@import 'nib'
+@import 'vendor/initializr.styl'
 
 /* ===================
     GLOBAL FONTS
