--- a/src/layouts/main.html.jade
+++ b/src/layouts/main.html.jade
@@ -5,11 +5,12 @@ layout: skeleton
 .header-container
   header.wrapper.clearfix
     
-    //Becomes menu on mobile devices, see responsive-nav.com
-    nav.nav-collapse: ul
-      li.active: a(href='/') TECH
-      li: a(href='/') MUSIC
-      li: a(href='/') PHOTO
+    //- Becomes menu on mobile devices, see responsive-nav.com
+    //- Ignoring nav for now (we only have one page)
+      nav.nav-collapse: ul
+        li.active: a(href='/') TECH
+        li: a(href='/') MUSIC
+        li: a(href='/') PHOTO
 
     .logo-box
       h1.title
