--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -1,11 +1,16 @@
-/* Aksel */
-
-//Extra power! http://visionmedia.github.io/nib/
-@import 'nib'
+/**
+* Main styles
+**/
 
 /* ===================
     VARIABLES
     =================== */
+
+//Breakpoints
+$smartphone = 480px
+$tablet = 770px
+$desktop = 1140px
+$widescreen = 1168px
 
 // "Solarized" color palette
 $base01 = #586e75
@@ -48,14 +53,14 @@ font-family: 'Lato', sans-serif;
 **/
 
 body 
-    font-family: 'PT Serif', serif;
+    font-family: 'PT Serif', serif !important
     //font-family: 'PT Sans', sans-serif;
     color: $bodyText
 
 h1, h2, h3, h4, h5, h6
     //font-family: 'PT Serif', serif;
     //font-family: 'Lato', sans-serif
-    font-family: 'Oswald', sans-serif
+    font-family: 'Oswald', sans-serif !important
     font-weight: 100
     color: $headerText
     text-transform: capitalize
@@ -117,7 +122,7 @@ p + p
     letter-spacing: -.07em
     @media only screen and (min-width: 480px)
         font-size: 3.3em
-    @media only screen and (min-width: 768px)
+    @media only screen and (min-width: 770px)
         font-size: 4em
     @media only screen and (min-width: 1140px)
         font-size: 4.5em
@@ -131,7 +136,7 @@ p + p
     font-weight: 400
     @media only screen and (min-width: 480px)
         font-size: 1em
-    @media only screen and (min-width: 768px)
+    @media only screen and (min-width: 770px)
         font-size: 1.4em
     @media only screen and (min-width: 1140px)
         font-size: 1.5em
@@ -211,7 +216,7 @@ p + p
                 @media only screen and (min-width: 480px)
                     bottom: 1.8em;
                     left: 6.2em;
-                @media only screen and (min-width: 768px)
+                @media only screen and (min-width: 770px)
                     bottom: 1.85em;
                     left: 5.3em;
                 @media only screen and (min-width: 1140px)
@@ -223,13 +228,13 @@ p + p
     z-index: 1
     
     .main article
-        @media only screen and (min-width: 768px)
+        @media only screen and (min-width: 770px)
             width: 69%
         @media only screen and (min-width: 1168px)
             width: 60%
 
     .main aside
-        @media only screen and (min-width: 768px)
+        @media only screen and (min-width: 770px)
             width: 28%
             padding: 0 0 10px 0
             margin-top: 5em;
@@ -326,7 +331,7 @@ footer.wrapper
         margin-top: 0
     
 .mainpage .previous.post-item 
-    @media only screen and (min-width: 768px)
+    @media only screen and (min-width: 770px)
         margin-right: -45% //We're making it span on the bigger screens
 
 .previous.post-item     
@@ -362,7 +367,7 @@ footer.wrapper
         margin-bottom: 2em
 
     .profile-pic img
-        width: 176px
+        width: 150px
         border-radius: 88px;
         box-shadow: 0 0 8px rgba(0, 0, 0, .8);
         margin: 0 auto;
