--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -34,135 +34,7 @@ $lightGrey = #999
 //Extra power! http://visionmedia.github.io/nib/
 @import 'nib'
 @import 'vendor/initializr.styl'
-
-/* ===================
-    GLOBAL FONTS
-    =================== */
-
-/*
-* I use Google Web Fonts.
-* PT Sans for bodytext, PT Serif for headings, Oswall for logo/title
-*/
-@import url(http://fonts.googleapis.com/css?family=PT\+Sans:400,700,400italic,700italic\|PT\+Serif:400,700,400italic\|Oswald:300,400,700\|Lato:100,300,400)
-
-/** Usage
-font-family: 'PT Sans', sans-serif;
-font-family: 'PT Serif', serif;
-font-family: 'Oswald', sans-serif;
-font-family: 'Lato', sans-serif;
-**/
-
-body 
-    font-family: 'PT Serif', serif !important
-    //font-family: 'PT Sans', sans-serif;
-    color: $bodyText
-
-h1, h2, h3, h4, h5, h6
-    //font-family: 'PT Serif', serif;
-    //font-family: 'Lato', sans-serif
-    font-family: 'Oswald', sans-serif !important
-    font-weight: 100
-    color: $headerText
-    text-transform: capitalize
-
-a
-    color: #2aa198
-    text-decoration: none
-
-.subtle-text
-    text-transform: lowercase
-    color: $lightGrey
-    font-size: .9em
-
-.bolded
-    font-weight: bold
-
-.italic
-    font-style: italic
-    
-.main footer,
-.main aside
-    color: $bodyText
-    h3
-        text-transform: uppercase
-
-    .bio p
-        font-style: italic
-
-.footer-container footer
-    h1, h2, h3, h4, h5, h6
-        color: #fff
-    p, span
-        color: $lightGrey
-
-//Make abbreviations stand out less
-abbr
-    font-variant: small-caps;
-    font-weight: 700
-
-//Indented paragraphs instead of space below them
-p
-    margin-bottom: 0
-
-p + p 
-    text-indent: 2em
-    margin-top: 0
-
-
-/*** Logo/Title ***/
-.title
-    font-family: 'Oswald', sans-serif
-    font-weight: 400
-    a
-        color: $base01
-        text-shadow: 1px 2px 2px $base03;
-    text-transform: none
-    line-height: 1em
-    font-size: 3em
-    letter-spacing: -.07em
-    @media only screen and (min-width: 480px)
-        font-size: 3.3em
-    @media only screen and (min-width: 770px)
-        font-size: 4em
-    @media only screen and (min-width: 1140px)
-        font-size: 4.5em
-
-.subtitle
-    font-family: 'Oswald', sans-serif
-    text-transform: uppercase
-    font-style: italic
-    color: $orange
-    font-size: 1em
-    font-weight: 400
-    @media only screen and (min-width: 480px)
-        font-size: 1em
-    @media only screen and (min-width: 770px)
-        font-size: 1.4em
-    @media only screen and (min-width: 1140px)
-        font-size: 1.5em
-
-.footer-container footer .title
-    font-size: 1.5em
-
-/*** End Logo/Title ***/
-
-/*** Blogpost fonts **/
-.post-summary
-    font-style: italic
-
-.post-metadata.bolded li
-    text-transform: uppercase
-
-.latest.post-item,
-.blogpost
-    .post-title
-        font-weight: 400
-        font-size: 2.5em
-        color: $base01
-        line-height: 1em
-/*** End Blogpost fonts **/
-
-/* ============= End Fonts ================*/
+@import 'fonts.styl'
 
 
 /* ===================
