--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -118,6 +118,17 @@ $lightGrey = #999
     max-width: 380px;
     _width: 380px;
     margin: 0 auto;
+
+/** IE < 9 warning box **/
+.lt-ie9 #i8-warning
+    margin: 20px auto
+    width: 80%
+    h1
+        color: red
+    p
+        font-family: helvetica
+
+
             
 /** Footer **/
 .footer-container,
