Styled blockquotes, updated readme

--- a/src/documents/styles/fonts.styl
+++ b/src/documents/styles/fonts.styl
@@ -104,6 +104,11 @@ p + p
     text-indent: 2em
     margin-top: 0
 
+//Blockquote styling
+blockquote
+  color: $lightGrey
+  font-style: italic
+
 
 /*** Logo/Title ***/
 .title
