--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -128,8 +128,12 @@ $lightGrey = #999
     p
         font-family: helvetica
 
+//Blockquotes yo
+blockquote
+  margin: 2em 0
+  padding: 0 2em
+  border-left: 1px solid $lightGrey
 
-            
 /** Footer **/
 .footer-container,
 .main aside
