Minor content tweaks

--- a/src/layouts/tags.html.jade
+++ b/src/layouts/tags.html.jade
@@ -4,7 +4,7 @@ layout: main
 isPage: true
 ---
 article.tagindex
-  h1 Pages tagged with 
+  h1 Posts tagged with 
     != '\"' + document.tag + '\"'
   hr
 
