Made sidecontent take less attention

--- a/src/documents/styles/fonts.styl
+++ b/src/documents/styles/fonts.styl
@@ -78,11 +78,11 @@ a
     
 .main footer,
 .main aside
-    color: $bodyText
     h3
         text-transform: uppercase
-
+        color: $lightGrey
     .bio p
+        color: $lightGrey
         font-style: italic
 
 .footer-container footer
