--- a/src/includes/post-metadata.jade
+++ b/src/includes/post-metadata.jade
@@ -1,5 +1,7 @@
-span Posted on 
-  != post.date.toDateString()
+.iconwrapper
+  .icon.icon-calendar2
+  span Posted on 
+    != post.date.toDateString()
 .tags
   .icon.icon-tags
   ul
