--- a/src/documents/styles/fonts.styl
+++ b/src/documents/styles/fonts.styl
@@ -54,12 +54,11 @@ body
     color: $bodyText
 
 h1, h2, h3, h4, h5, h6
-    //font-family: 'PT Serif', serif;
-    //font-family: 'Lato', sans-serif
     font-family: 'Oswald', sans-serif !important
     font-weight: 100
     color: $headerText
     text-transform: capitalize
+    line-height: 1em
 
 a
     color: #2aa198
@@ -162,5 +161,12 @@ blockquote
         color: $base01
         line-height: 1em
 /*** End Blogpost fonts **/
+
+/*** Icons ***/
+.icon
+    font-size: initial
+
+.icon-lg
+    font-size: 1em
 
 /* ============= End Fonts ================*/
