Improved space usage at widescreen

--- a/src/documents/styles/fonts.styl
+++ b/src/documents/styles/fonts.styl
@@ -149,6 +149,7 @@ blockquote
 /*** Blogpost fonts **/
 .post-summary
     font-style: italic
+    font-size: 1.2em
 
 .post-metadata.bolded li
     text-transform: uppercase
