Quick font comment update

--- a/src/documents/styles/fonts.styl
+++ b/src/documents/styles/fonts.styl
@@ -4,7 +4,7 @@
 
 /*
 * I use Google Web Fonts.
-* PT Sans for bodytext, PT Serif for headings, Oswall for logo/title
+* PT Serif for bodytext, Oswald for logo/title og headings
 */
 @font-face {
   font-family: 'PT Serif';
