--- a/src/documents/styles/main.css.styl
+++ b/src/documents/styles/main.css.styl
@@ -34,6 +34,9 @@ $cyan = #2aa198
 /* ===================
     General: Theme & layout
    =================== */
+//Textured background on whole page
+body.akselgresvig
+    background-image: url('/images/styling/debut_light.png')
 
 /*** some general icon styling ***/
 .iconwrapper *
@@ -52,14 +55,14 @@ $cyan = #2aa198
     padding: .4em
 
 .header-container
-    background-image: url('/images/styling/debut_light@2X.png')
-    box-shadow: 0px 1px 4px rgba(0,0,0,.2)
+    box-shadow: none
     border-top: 2px solid $cyan
-    border-bottom: 1px solid $cyan
     z-index: 100
 
     header 
         min-height:4em
+        border-bottom: 2px solid $cyan
+
         @media only screen and (min-width: 480px)
             min-height: 4.5em
         @media only screen and (min-width: 770px)
@@ -92,7 +95,6 @@ $cyan = #2aa198
                     left: 5.6em;
 
 .main-container
-    background-image: url('/images/styling/debut_light.png')
     z-index: 1
     
     .main article
